[package]
name = "ztcm"
version = "0.1.0"
edition = "2021"
authors = ["Evan Zaplachinski"]
description = "A simple rust implementation of Typed Css Modules"
readme = "README.md"
repository = "https://github.com/eZaplachi/ztcm"
licence = "MIT"
licence-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"
glob = "0.3"